# pytest-try-except

./: LICENSE  README.md  docker-compose.yml  env.sample
app/: .coveragerc
app/src/: main.py  newton.py  private.py  sample_with_having_errors.py  target_module.py
app/tests/: conftest.py  test_main.py  test_newton.py  test_target_module.py
docker/: Dockerfile  bashrc  pyproject.toml  waiting.sh
